# C-RAG_FIN-Research

./: .cursorrules  .gitignore  README.md
project/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  START_STREAMLIT.sh  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
project/.streamlit/: config.toml
project/app/: __init__.py
project/app/alerts/: __init__.py  alert_rules.py  news_alerts.py  notifications.py
project/app/analysis/: news_trends.py
project/app/api/: __init__.py  auth.py  main.py  middleware.py
project/app/api/models/: __init__.py  documents.py  ingestion.py  query.py
project/app/api/routes/: documents.py  health.py  ingestion.py  query.py  trends.py
project/app/ingestion/: __init__.py  alternative_data_fetcher.py  central_bank_fetcher.py  def14a_parser.py  document_loader.py  economic_calendar_fetcher.py  edgar_fetcher.py  esg_fetcher.py  form4_parser.py  forms1_parser.py  fred_fetcher.py  imf_fetcher.py  news_fetcher.py  news_scraper.py  news_summarizer.py  pipeline.py  rss_parser.py  sentiment_analyzer.py  social_media_fetcher.py  stock_data_normalizer.py  transcript_fetcher.py  transcript_parser.py  world_bank_fetcher.py  xbrl_parser.py  yfinance_fetcher.py
project/app/ingestion/processors/: __init__.py  alternative_data_processor.py  base_processor.py  document_processor.py  economic_data_processor.py  news_processor.py  stock_processor.py  transcript_processor.py
project/app/rag/: __init__.py  chain.py  embedding_ab_test.py  embedding_factory.py  filter_builder.py  llm_factory.py  prompt_engineering.py  query_parser.py  query_refinement.py  retrieval_optimizer.py
project/app/services/: __init__.py  news_monitor.py
project/app/ui/: __init__.py  api_client.py  app.py  app_helpers.py  app_init.py  chat_interface.py  document_helpers.py  document_list.py  document_management.py  document_search.py  document_stats.py
project/app/utils/: __init__.py  config.py  conversation_export.py  conversation_memory.py  document_manager.py  document_processors.py  error_handlers.py  formatters.py  health.py  langchain_memory.py  logger.py  metrics.py  sharing.py
project/app/vector_db/: __init__.py  chroma_store.py
project/dev/archive/tasks_done/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-028.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-033_maintanance.md  TASK-034.md  TASK-035.md  TASK-036.md  TASK-037.md  TASK-038.md  TASK-040.md  TASK-040_maintanance.md  TASK-041.md  TASK-042.md  (+6 more)
project/dev/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  TASK-028.md  TASK-029.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-033_maintanance.md  TASK-034.md  TASK-035.md  TASK-036.md  TASK-037.md  TASK-038.md  TASK-039.md  TASK-040.md  (+12 more)
project/docs/: api.md  configuration.md  deployment.md  edgar_integration.md  prd-phase1-implementation-status.md  prd-phase1.md  prd-phase2.md  prd.md  testing.md
project/docs/integrations/: advanced_query_features.md  alternative_data_sources.md  central_bank_integration.md  economic_calendar_integration.md  edgar_integration.md  embedding_ab_testing.md  export_and_sharing.md  fred_integration.md  imf_world_bank_integration.md  langchain_memory.md  news_aggregation.md  news_trend_analysis.md  sentiment_analysis.md  transcript_integration.md  yfinance_integration.md
project/docs/reference/: api.md  api_integration_audit.md  configuration.md  ingestion_architecture.md  testing.md
project/docs/sphinx/: README.md  publish.sh
project/docs/sphinx/source/: conf.py  index.rst  modules.rst
project/scripts/: analyze_news_trends.py  deploy_local.sh  deploy_with_ngrok.sh  example_chromadb_usage.py  fetch_central_bank_data.py  fetch_economic_calendar.py  fetch_edgar_data.py  fetch_fred_data.py  fetch_imf_data.py  fetch_news.py  fetch_stock_data.py  fetch_transcripts.py  fetch_world_bank_data.py  run_embedding_ab_test.py  run_streamlit.py  start_api.py  start_news_monitor.py  start_streamlit.sh  summarize_news.py  test_chromadb.py  test_citation_tracking.py  test_embeddings.py  test_ingestion.py  test_ollama.py  test_rag_query.py  test_streamlit_integration.py  test_system_integration.py  validate_chromadb_comprehensive.py  validate_chromadb_data.py  validate_setup.py  verify_document_indexing.py
project/tests/: conftest.py  test_alert_rules.py  test_alternative_data_fetcher.py  test_api.py  test_api_client.py  test_api_client_integration.py  test_basic_rag.py  test_central_bank_fetcher.py  test_chromadb.py  test_chromadb_comprehensive.py  test_config_pydantic.py  test_conversation_export.py  test_conversation_memory.py  test_def14a_parser.py  test_document_loader_comprehensive.py  test_document_reindexing_versioning.py  test_economic_calendar_fetcher.py  test_edgar_enhanced.py  test_edgar_fetcher.py  test_embedding_ab_test.py  test_embeddings.py  test_end_to_end.py  test_esg_fetcher.py  test_filter_builder.py  test_form4_parser.py  test_forms1_parser.py  test_fred_fetcher.py  test_health.py  test_imf_fetcher.py  test_ingestion.py  test_langchain_memory.py  test_llm_factory.py  test_metrics.py  test_news_alerts.py  test_news_alerts_integration.py  test_news_fetcher.py  test_news_integration.py  test_news_monitor.py  test_news_monitor_integration.py  test_news_scraper.py  (+21 more)
