[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextual-rag-financial-research"
version = "0.1.0"
description = "A production-ready RAG (Retrieval-Augmented Generation) system for semantic search across financial documents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Note: Using table format for compatibility, but setuptools prefers string format
# For future: use license = "MIT" when setuptools>=77.0.0 deprecation is resolved
authors = [
    { name = "Project Team" }
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "financial-research",
    "langchain",
    "ollama",
    "chromadb",
    "streamlit"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "streamlit>=1.28.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.20.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

# Optional dependencies grouped by purpose
[project.optional-dependencies]
dev = [
    "mypy>=1.18.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
docs = [
    "sphinx>=8.2.0",
    "sphinx-rtd-theme>=3.0.0",
]
# Note: 'all' group would reference itself, install separately:
# pip install -e ".[dev,test,docs]"

[project.urls]
Homepage = "https://github.com/yourusername/contextual-rag-financial-research"
Documentation = "https://github.com/yourusername/contextual-rag-financial-research#readme"
Repository = "https://github.com/yourusername/contextual-rag-financial-research"
Issues = "https://github.com/yourusername/contextual-rag-financial-research/issues"

[tool.setuptools]
# Explicitly specify packages to include (only the app package)
packages = ["app"]

[tool.mypy]
# Python version
python_version = "3.13"

# Basic type checking options
warn_return_any = false  # Allow Any returns for JSON parsing and external APIs
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Show error codes and context
show_error_codes = true
show_error_context = true
show_column_numbers = true
pretty = true

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Caching
cache_dir = ".mypy_cache"
sqlite_cache = true

# Exclude patterns
exclude = [
    '^venv/',
    '^build/',
    '^dist/',
    '^htmlcov/',
    '^\.mypy_cache/',
]

# Per-module overrides
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["var-annotated", "has-type"]

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "streamlit.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

# isort import sorter configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["venv/*", ".venv/*", "build/*", "dist/*", "*.egg-info/*", ".mypy_cache/*"]

# Flake8 linter configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "D"]  # E203 conflicts with black, W503 is handled by black, D* (docstrings) disabled initially for gradual adoption
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    "htmlcov",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
]
